<resources>
    <string name="app_name">GuildWakayama2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Write</string>
    <string name="title_mypage">MyPage</string>
    <string name="default_username">jack</string>
    <string name="default_password">1234</string>
    <string name="point_format">%d</string>
    <string name="ticket_format">%d枚</string>
    <string name="no_request_title">あなたは依頼を出していません</string>
    <string name="no_request_text">で依頼を出してください</string>
    <string name="home">ホーム</string>
    <string name="request">あなたの依頼</string>
    <string name="respond">誰かの依頼</string>
    <string name="no_respond_title">あなたは依頼を受けていません</string>
    <string name="no_respond_text">で依頼を受けてください</string>
    <string name="requestsolve">解決</string>
    <string name="respondsolve">地図を表示</string>
    <string name="requestcancel">取り消し</string>
    <string name="respondcancel">キャンセル</string>
    <string name="profile">プロフィール</string>
    <string name="add">チケットの追加</string>
    <string name="change">プロフィール変更</string>
    <string name="exchange">ポイント交換</string>
    <string name="ticket">チケット</string>
    <string name="point">ポイント</string>
    <string name="notification">依頼を出す</string>
    <string name="notification_genre">依頼の種類</string>
    <string name="notification_title">依頼のタイトル</string>
    <string name="notification_body">依頼内容</string>
    <string name="notification_level">依頼の難易度</string>
    <string name="notification_edit_title">タイトルを入力してください</string>
    <string name="notification_edit_body">依頼内容を入力してください</string>
    <string name="notification_button">依頼を出すボタン</string>
    <string name="dashboard_button">依頼更新</string>
    <string name="dashboard">依頼検索</string>
    <string name="loading">ロード中です...</string>
    <string name="title1">Close</string>
    <string name="title2">Request</string>
    <string name="signin">サインイン</string>
</resources>