<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:background="#4169e1"
            android:textColor="#ffffff"
            android:text="@string/notification" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#696969"
                android:text="@string/notification_genre" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/blue"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:minHeight="48dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#696969"
                android:textSize="16sp"
                android:text="@string/notification_title" />

            <EditText
                android:id="@+id/editTextUserInput1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notification_edit_title"
                android:inputType="text"
                android:textColorHint="#696969"
                android:textColor="#696969"
                android:background="#f5f5f5"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textCursorDrawable="@color/blue"
                android:colorControlNormal="@color/black"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#696969"
                android:textSize="16sp"
                android:text="@string/notification_body" />

            <EditText
                android:id="@+id/editTextUserInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginBottom="20dp"
                android:textColorHint="#696969"
                android:textColor="#696969"
                android:background="#f5f5f5"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:colorControlNormal="@color/black"
                android:textCursorDrawable="@color/blue"
                android:hint="@string/notification_edit_body" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#696969"
                android:text="@string/notification_level" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="@color/blue"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:minHeight="48dp"
                />

            <Button
                android:id="@+id/logButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/notification"
                android:contentDescription="@string/notification_button"/>
        </LinearLayout>
    </LinearLayout>

    <!-- ユーザーが選択する項目のSpinner -->

</androidx.constraintlayout.widget.ConstraintLayout>