<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:baselineAligned="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:background="#4169e1"
            android:textColor="#ffffff"
            android:text="@string/home" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/request"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/request"
                    android:textAlignment="center"
                    android:textColor="#696969"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/RequestTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/no_request_title"
                    android:textColor="#696969"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/RequestImageView"
                        android:layout_width="75dp"
                        android:layout_height="67dp"
                        android:contentDescription="@string/request"
                        android:src="@drawable/ic_write" />

                    <TextView
                        android:id="@+id/RequestTextView"
                        android:layout_width="240dp"
                        android:layout_height="59dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="64dp"
                        android:contentDescription="@string/request"
                        android:gravity="center_horizontal"
                        android:text="@string/no_request_text"
                        android:textColor="#696969"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:baselineAligned="true"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/RequestCancelButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/requestcancel" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/RequestSolveButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/requestsolve" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    android:background="#d3d3d3"
                    android:scaleType="fitXY"
                    android:src="@drawable/gradient_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/respond"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_horizontal"
                        android:text="@string/respond"
                        android:textAlignment="center"
                        android:textColor="#696969"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/RespondTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_horizontal"
                        android:text="@string/no_respond_title"
                        android:textColor="#696969"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/RespondImageview"
                            android:layout_width="75dp"
                            android:layout_height="67dp"
                            android:contentDescription="@string/respond"
                            android:src="@drawable/ic_search" />

                        <TextView
                            android:id="@+id/RespondTextview"
                            android:layout_width="243dp"
                            android:layout_height="81dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginEnd="68dp"
                            android:contentDescription="@string/respond"
                            android:gravity="center_horizontal"
                            android:text="@string/no_respond_text"
                            android:textColor="#696969"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:baselineAligned="true"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/RespondCancelButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/respondcancel" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/RespondReviewButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/respondsolve" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="vertical"></LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>