<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mypage.MypageFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:background="#4169e1"
            android:textColor="#ffffff"
            android:text="@string/profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="#ffffff"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/userIconImageView"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/profile"
                    app:srcCompat="@drawable/ic_icon" />

                <TextView
                    android:id="@+id/userNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:textColor="#696969"
                    android:textSize="16sp"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/changeInfoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/change" />

        </LinearLayout>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/gradient_line"
            android:scaleType="fitXY"
            android:background="#d3d3d3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="227dp"
            android:background="#f5f5f5"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_ticket"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/ticket"
                    android:src="@drawable/ic_ticket" />

                <TextView
                    android:id="@+id/ticketTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="#696969"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/increaseTicketButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/add" />

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:background="#d3d3d3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_point"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/point"
                    android:src="@drawable/ic_point" />

                <TextView
                    android:id="@+id/pointTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="#696969"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/exchangeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/exchange" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/gradient_line"
            android:scaleType="fitXY"
            android:background="#d3d3d3" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>